cloud_native/week_6/yamls/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: llmservice
spec:
  selector:
    app: llmserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
