cloud_native/week_6/yamls/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: project3gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  gatewayClassName: nginx
  listeners:
  - name: project3gateway-http
    protocol: HTTP
    port: 80
    hostname: acr0058b77c.zapto.org
  - name: project3gateway-https
    protocol: HTTPS
    port: 443
    hostname: acr0058b77c.zapto.org
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        group: ""
        name: issuer-account-key
